ping_pong_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: ping-pong-app
          image: ping-pong-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
