ping_pong_app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ingress
  namespace: exercises
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 3456
